5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/1165/executions/1616_2947.log
== TEST (2019-04-01 14:27:13) 
-- CODE:
from math import*

ladob = float(input("valor do lado b: "))
ladoc = float(input("valor do lado c: "))
ang = radians(float(input("valor de a e b: ")))
a = b** + c** - 2 * (b*) * cos(ang)


-- ERROR:
File "XXXX", line 6
    a = b** + c** - 2 * (b*) * cos(ang)
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:29:01) 
-- CODE:
from math import*

ladob = float(input("valor do lado b: "))
ladoc = float(input("valor do lado c: "))
ang = radians(float(input("valor de a e b: ")))
a = b** + c** - squart(bc) * cos(ang)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    a = b** + c** - squart(bc) * cos(ang)
NameError: name 'b' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:29:25) 
-- CODE:
from math import*

ladob = float(input("valor do lado b: "))
ladoc = float(input("valor do lado c: "))
ang = radians(float(input("valor de a e b: ")))
a = b** + c** - squart(bc) * cos(ang)

print(round, 2)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    a = b** + c** - squart(bc) * cos(ang)
NameError: name 'b' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 14:29:27) 
-- CODE:
from math import*

ladob = float(input("valor do lado b: "))
ladoc = float(input("valor do lado c: "))
ang = radians(float(input("valor de a e b: ")))
a = b** + c** - squart(bc) * cos(ang)

print(round, 2)


-- EXECUTION TIME:
0.18428
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1616/2947/main.py", line 6, in <module>
    a = b** + c** - squart(bc) * cos(ang)
NameError: name 'b' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:33:32) 
-- CODE:
from math import*

b = float(input("valor do lado b: "))
c = float(input("valor do lado c: "))
ang = radians(float(input("valor de b e c: ")))

a = sqrt(b ** + c ** - 2(b * c * cos(ang)))

print(round(a, 2)


-- ERROR:
File "XXXX", line 11
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:33:40) 
-- CODE:
from math import*

b = float(input("valor do lado b: "))
c = float(input("valor do lado c: "))
ang = radians(float(input("valor de b e c: ")))

a = sqrt(b ** + c ** - 2(b * c * cos(ang)))

print(round(a, 2)
-- ERROR:
File "XXXX", line 10
    
                     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:34:06) 
-- CODE:
from math import*

b = float(input("valor do lado b: "))
c = float(input("valor do lado c: "))
ang = radians(float(input("valor de b e c: ")))

a = sqrt(b ** + c ** - 2(b * c * cos(ang)))

print(round(a, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    a = sqrt(b ** + c ** - 2(b * c * cos(ang)))
TypeError: 'int' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 14:34:08) 
-- CODE:
from math import*

b = float(input("valor do lado b: "))
c = float(input("valor do lado c: "))
ang = radians(float(input("valor de b e c: ")))

a = sqrt(b ** + c ** - 2(b * c * cos(ang)))

print(round(a, 2))
-- EXECUTION TIME:
0.141635
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1616/2947/main.py", line 7, in <module>
    a = sqrt(b ** + c ** - 2(b * c * cos(ang)))
TypeError: 'int' object is not callable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:34:12) 
-- CODE:
from math import*

b = float(input("valor do lado b: "))
c = float(input("valor do lado c: "))
ang = radians(float(input("valor de b e c: ")))

a = sqrt(b ** + c ** - 2(b * c * cos(ang)))

print(round(a, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    a = sqrt(b ** + c ** - 2(b * c * cos(ang)))
TypeError: 'int' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:34:50) 
-- CODE:
from math import*

b = float(input("valor do lado b: "))
c = float(input("valor do lado c: "))
ang = radians(float(input("valor de b e c: ")))

a = sqrt(b ** + c ** - 2(b * c * cos(ang)))

print(round(a, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    a = sqrt(b ** + c ** - 2(b * c * cos(ang)))
TypeError: 'int' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:35:01) 
-- CODE:

b = float(input("valor do lado b: "))
c = float(input("valor do lado c: "))
ang = radians(float(input("valor de b e c: ")))

a = sqrt(b ** + c ** - 2(b * c * cos(ang)))

print(round(a, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    ang = radians(float(input()))
NameError: name 'radians' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 14:35:03) 
-- CODE:

b = float(input("valor do lado b: "))
c = float(input("valor do lado c: "))
ang = radians(float(input("valor de b e c: ")))

a = sqrt(b ** + c ** - 2(b * c * cos(ang)))

print(round(a, 2))
-- EXECUTION TIME:
0.220243
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1616/2947/main.py", line 4, in <module>
    ang = radians(float(input()))
NameError: name 'radians' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:35:46) 
-- CODE:

b = float(input("valor do lado b: "))
c = float(input("valor do lado c: "))
ang = radians(float(input("valor de b e c: ")))

a = sqrt(b ** + c ** - 2(b * c * cos(ang)))

print(round(a, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    ang = radians(float(input()))
NameError: name 'radians' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 14:35:50) 
-- CODE:

b = float(input("valor do lado b: "))
c = float(input("valor do lado c: "))
ang = radians(float(input("valor de b e c: ")))

a = sqrt(b ** + c ** - 2(b * c * cos(ang)))

print(round(a, 2))
-- EXECUTION TIME:
0.20123
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1616/2947/main.py", line 4, in <module>
    ang = radians(float(input()))
NameError: name 'radians' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:36:19) 
-- CODE:
from math import*

b = float(input("valor do lado b: "))
c = float(input("valor do lado c: "))
ang = radians(float(input("valor de b e c: ")))

a = sqrt(b ** + c ** - 2(b * c * cos(ang)))

print(round(a, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    a = sqrt(b ** + c ** - 2(b * c * cos(ang)))
TypeError: 'int' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:36:51) 
-- CODE:
from math import*

b = float(input("valor do lado b: "))
c = float(input("valor do lado c: "))
ang = radians(float(input("valor de b e c: ")))

a = (b ** + c ** - 2(b * c * cos(ang)))

print(round(a, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    a = (b ** + c ** - 2(b * c * cos(ang)))
TypeError: 'int' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 14:36:53) 
-- CODE:
from math import*

b = float(input("valor do lado b: "))
c = float(input("valor do lado c: "))
ang = radians(float(input("valor de b e c: ")))

a = (b ** + c ** - 2(b * c * cos(ang)))

print(round(a, 2))
-- EXECUTION TIME:
0.186798
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1616/2947/main.py", line 7, in <module>
    a = (b ** + c ** - 2(b * c * cos(ang)))
TypeError: 'int' object is not callable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:37:16) 
-- CODE:


b = float(input("valor do lado b: "))
c = float(input("valor do lado c: "))
ang = radians(float(input("valor de b e c: ")))

a = (b ** + c ** - 2(b * c * cos(ang)))

print(round(a, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    ang = radians(float(input()))
NameError: name 'radians' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 14:37:18) 
-- CODE:


b = float(input("valor do lado b: "))
c = float(input("valor do lado c: "))
ang = radians(float(input("valor de b e c: ")))

a = (b ** + c ** - 2(b * c * cos(ang)))

print(round(a, 2))
-- EXECUTION TIME:
0.13865
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1616/2947/main.py", line 5, in <module>
    ang = radians(float(input()))
NameError: name 'radians' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:37:34) 
-- CODE:
b = float(input("valor do lado b: "))
c = float(input("valor do lado c: "))
ang = radians(float(input("valor de b e c: ")))
from math import*
a = (b ** + c ** - 2(b * c * cos(ang)))

print(round(a, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    ang = radians(float(input()))
NameError: name 'radians' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 14:37:37) 
-- CODE:
b = float(input("valor do lado b: "))
c = float(input("valor do lado c: "))
ang = radians(float(input("valor de b e c: ")))
from math import*
a = (b ** + c ** - 2(b * c * cos(ang)))

print(round(a, 2))
-- EXECUTION TIME:
0.150565
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1616/2947/main.py", line 3, in <module>
    ang = radians(float(input()))
NameError: name 'radians' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:39:15) 
-- CODE:
b = float(input("valor do lado b: "))
c = float(input("valor do lado c: "))
ang = radians(float(input("valor de b e c: ")))

from math import*
a = b ** + c ** - 2 * b * c * (cos(ang)) 

print(round(a, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    ang = radians(float(input()))
NameError: name 'radians' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 14:39:19) 
-- CODE:
b = float(input("valor do lado b: "))
c = float(input("valor do lado c: "))
ang = radians(float(input("valor de b e c: ")))

from math import*
a = b ** + c ** - 2 * b * c * (cos(ang)) 

print(round(a, 2))
-- EXECUTION TIME:
0.222305
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1616/2947/main.py", line 3, in <module>
    ang = radians(float(input()))
NameError: name 'radians' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:42:16) 
-- CODE:
b = float(input("valor do lado b: "))
c = float(input("valor do lado c: "))
ang = radians(float(input("valor de b e c: ")))

from math import*
a ** = b ** + c ** - 2 * b * c * (cos(ang)) 

print(round(ang, 2))
-- ERROR:
File "XXXX", line 6
    a ** = b ** + c ** - 2 * b * c * (cos(ang)) 
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:42:37) 
-- CODE:
b = float(input("valor do lado b: "))
c = float(input("valor do lado c: "))
ang = radians(float(input("valor de b e c: ")))

from math import*
alfa = a ** = b ** + c ** - 2 * b * c * (cos(ang)) 

print(round(alfa, 2))
-- ERROR:
File "XXXX", line 6
    alfa = a ** = b ** + c ** - 2 * b * c * (cos(ang)) 
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:42:50) 
-- CODE:
b = float(input("valor do lado b: "))
c = float(input("valor do lado c: "))
ang = radians(float(input("valor de b e c: ")))

from math import*
alfa = a ** b ** + c ** - 2 * b * c * (cos(ang)) 

print(round(alfa, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    ang = radians(float(input()))
NameError: name 'radians' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 14:42:53) 
-- CODE:
b = float(input("valor do lado b: "))
c = float(input("valor do lado c: "))
ang = radians(float(input("valor de b e c: ")))

from math import*
alfa = a ** b ** + c ** - 2 * b * c * (cos(ang)) 

print(round(alfa, 2))
-- EXECUTION TIME:
0.176704
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1616/2947/main.py", line 3, in <module>
    ang = radians(float(input()))
NameError: name 'radians' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:43:20) 
-- CODE:
b = float(input("valor do lado b: "))
c = float(input("valor do lado c: "))
alfa = radians(float(input("valor de b e c: ")))

from math import*
alfa = a ** b ** + c ** - 2 * b * c * (cos(alfa)) 

print(round(alfa, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    alfa = radians(float(input()))
NameError: name 'radians' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 14:43:23) 
-- CODE:
b = float(input("valor do lado b: "))
c = float(input("valor do lado c: "))
alfa = radians(float(input("valor de b e c: ")))

from math import*
alfa = a ** b ** + c ** - 2 * b * c * (cos(alfa)) 

print(round(alfa, 2))
-- EXECUTION TIME:
0.207162
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1616/2947/main.py", line 3, in <module>
    alfa = radians(float(input()))
NameError: name 'radians' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:43:42) 
-- CODE:
b = float(input("valor do lado b: "))
c = float(input("valor do lado c: "))
alfa = radians(float(input("valor de b e c: ")))

from math import*
total = a ** b ** + c ** - 2 * b * c * (cos(alfa)) 

print(round(total, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    alfa = radians(float(input()))
NameError: name 'radians' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 14:43:45) 
-- CODE:
b = float(input("valor do lado b: "))
c = float(input("valor do lado c: "))
alfa = radians(float(input("valor de b e c: ")))

from math import*
total = a ** b ** + c ** - 2 * b * c * (cos(alfa)) 

print(round(total, 2))
-- EXECUTION TIME:
0.156725
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1616/2947/main.py", line 3, in <module>
    alfa = radians(float(input()))
NameError: name 'radians' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 14:44:58) 
-- CODE:
from math import*
b = float(input("valor do lado b: "))
c = float(input("valor do lado c: "))
alfa = radians(float(input("valor de b e c: ")))

total = b ** + c ** - 2 * b * c * (cos(alfa)) 

print(round(total, 2))
-- EXECUTION TIME:
0.184492
-- TEST CASE 1:
---- input:
8
10
60
---- correct output:
9.17
---- user output:
40.84
-- TEST CASE 2:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
---- user output:
271.22
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:45:00) 
-- CODE:
from math import*
b = float(input("valor do lado b: "))
c = float(input("valor do lado c: "))
alfa = radians(float(input("valor de b e c: ")))

total = b ** + c ** - 2 * b * c * (cos(alfa)) 

print(round(total, 2))
-- OUTPUT:
40.84
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:46:10) 
-- CODE:
from math import*
b = float(input("valor do lado b: "))
c = float(input("valor do lado c: "))
alfa = radians(float(input("valor de b e c: ")))

a** = b ** + c ** - 2 * b * c * (cos(alfa)) 

print(round(total, 2))
-- ERROR:
File "XXXX", line 6
    a** = b ** + c ** - 2 * b * c * (cos(alfa)) 
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:47:36) 
-- CODE:
from math import*
b = float(input("valor do lado b: "))
c = float(input("valor do lado c: "))
alfa = radians(float(input("valor de b e c: ")))

a = b ** + c ** - 2 * b * c * (cos(alfa)) 

print(round(a, 2))
-- OUTPUT:
40.84
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 14:47:38) 
-- CODE:
from math import*
b = float(input("valor do lado b: "))
c = float(input("valor do lado c: "))
alfa = radians(float(input("valor de b e c: ")))

a = b ** + c ** - 2 * b * c * (cos(alfa)) 

print(round(a, 2))
-- EXECUTION TIME:
0.126764
-- TEST CASE 1:
---- input:
8
10
60
---- correct output:
9.17
---- user output:
40.84
-- TEST CASE 2:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
---- user output:
271.22
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:48:12) 
-- CODE:
from math import*
b = float(input("valor do lado b: "))
c = float(input("valor do lado c: "))
alfa = radians(float(input("valor de b e c: ")))

a = b ** + c ** - 2 * b * c * (cos(alfa)) 

print(round(a, 2))
-- OUTPUT:
40.84
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 14:48:16) 
-- CODE:
from math import*
b = float(input("valor do lado b: "))
c = float(input("valor do lado c: "))
alfa = radians(float(input("valor de b e c: ")))

a = b ** + c ** - 2 * b * c * (cos(alfa)) 

print(round(a, 2))
-- EXECUTION TIME:
0.181808
-- TEST CASE 1:
---- input:
8
10
60
---- correct output:
9.17
---- user output:
40.84
-- TEST CASE 2:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
---- user output:
271.22
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:48:58) 
-- CODE:
from math import*
b = float(input("valor do lado b: "))
c = float(input("valor do lado c: "))
alfa = radians(float(input("valor de b e c: ")))

soma = sqrt(b ** + c ** - 2 * b * c * (cos(alfa)))

print(round(a, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round(a, 2))
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 14:49:00) 
-- CODE:
from math import*
b = float(input("valor do lado b: "))
c = float(input("valor do lado c: "))
alfa = radians(float(input("valor de b e c: ")))

soma = sqrt(b ** + c ** - 2 * b * c * (cos(alfa)))

print(round(a, 2))
-- EXECUTION TIME:
0.149343
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1616/2947/main.py", line 8, in <module>
    print(round(a, 2))
NameError: name 'a' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:49:07) 
-- CODE:
from math import*
b = float(input("valor do lado b: "))
c = float(input("valor do lado c: "))
alfa = radians(float(input("valor de b e c: ")))

soma = sqrt(b ** + c ** - 2 * b * c * (cos(alfa)))

print(round(soma, 2))
-- OUTPUT:
6.39
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 14:49:09) 
-- CODE:
from math import*
b = float(input("valor do lado b: "))
c = float(input("valor do lado c: "))
alfa = radians(float(input("valor de b e c: ")))

soma = sqrt(b ** + c ** - 2 * b * c * (cos(alfa)))

print(round(soma, 2))
-- EXECUTION TIME:
0.152179
-- TEST CASE 1:
---- input:
8
10
60
---- correct output:
9.17
---- user output:
6.39
-- TEST CASE 2:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
---- user output:
16.47
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:49:36) 
-- CODE:
from math import*
b = float(input("valor do lado b: "))
c = float(input("valor do lado c: "))
alfa = radians(float(input("valor de b e c: ")))

soma = sqrt(b ** + c ** - 2 * b * c * (cos(alfa)))

print(round(soma, 2))
-- OUTPUT:
6.39
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:49:36) 
-- CODE:
from math import*
b = float(input("valor do lado b: "))
c = float(input("valor do lado c: "))
alfa = radians(float(input("valor de b e c: ")))

soma = sqrt(b ** + c ** - 2 * b * c * (cos(alfa)))

print(round(soma, 2))
-- OUTPUT:
6.39
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:50:59) 
-- CODE:
from math import*
b = float(input("valor do lado b: "))
c = float(input("valor do lado c: "))
alfa = radians(float(input("valor de b e c: ")))

soma = sqrt(a ** + b ** + c ** - 2 * b * c * (cos(alfa)))

print(round(soma, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    soma = sqrt(a ** + b ** + c ** - 2 * b * c * (cos(alfa)))
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:52:10) 
-- CODE:
from math import*
b = float(input("valor do lado b: "))
c = float(input("valor do lado c: "))
alfa = radians(float(input("valor de b e c: ")))

a =(a ** + b ** + c ** - 2 * b * c * (cos(alfa))))

print(round(a, 2))
-- ERROR:
File "XXXX", line 6
    a =(a ** + b ** + c ** - 2 * b * c * (cos(alfa))))
                                                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:52:15) 
-- CODE:
from math import*
b = float(input("valor do lado b: "))
c = float(input("valor do lado c: "))
alfa = radians(float(input("valor de b e c: ")))

a = (a ** + b ** + c ** - 2 * b * c * (cos(alfa))))

print(round(a, 2))
-- ERROR:
File "XXXX", line 6
    a = (a ** + b ** + c ** - 2 * b * c * (cos(alfa))))
                                                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:53:47) 
-- CODE:
from math import*
b = float(input("valor do lado b: "))
c = float(input("valor do lado c: "))
alfa = radians(float(input("valor de b e c: ")))

alfa = (b ** + c ** - 2 * b * c * (cos(bc)))

print(round(alfa, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    alfa = (b ** + c ** - 2 * b * c * (cos(bc)))
NameError: name 'bc' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:54:45) 
-- CODE:
from math import*
b = float(input("valor do lado b: "))
c = float(input("valor do lado c: "))
alfa = radians(float(input("valor de b e c: ")))

a = (b ** + c ** - 2 * b * c * (cos(alfa)))

print(round(a, 2))
-- OUTPUT:
40.84
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 14:54:46) 
-- CODE:
from math import*
b = float(input("valor do lado b: "))
c = float(input("valor do lado c: "))
alfa = radians(float(input("valor de b e c: ")))

a = (b ** + c ** - 2 * b * c * (cos(alfa)))

print(round(a, 2))
-- EXECUTION TIME:
0.127094
-- TEST CASE 1:
---- input:
8
10
60
---- correct output:
9.17
---- user output:
40.84
-- TEST CASE 2:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
---- user output:
271.22
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
